--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 <h4>10 April 2020</h4>
                                 <h4 class="subheading">Our Humble Beginnings</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Our first Donation people in need during the CORONA-19 pandemic</p></div>
+                            <div class="timeline-body"><p class="text-muted">Our first Donation to people in need during the CORONA-19 pandemic</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
