--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/5.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>10 April 2020</h4>
+                                <h4>April 2020</h4>
                                 <h4 class="subheading">Our Humble Beginnings</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Our first Donation to people in need during the CORONA-19 pandemic</p></div>
